Test/src/com/test/test/fail/LCS.java
package com.test.test.fail;

import java.io.BufferedReader;
import java.io.BufferedWriter;
import java.io.InputStreamReader;
import java.io.OutputStreamWriter;

public class LCS {

	public static void main(String[] args) throws Exception{
		BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
		BufferedWriter bw = new BufferedWriter(new OutputStreamWriter(System.out));
		
		String txt1 = br.readLine();
		String txt2 = br.readLine();
		
		
		
		
		bw.flush();
		bw.close();
	}

}
